--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -385,7 +385,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="5tg-7f-oOA">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyRoamniReviewTableViewCell" id="5tg-7f-oOA" customClass="MyRoamniReviewTableViewCell" customModule="Roamni" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5tg-7f-oOA" id="5Xy-rK-tah">
@@ -396,6 +396,13 @@
                                             <rect key="frame" x="22" y="0.0" width="40" height="40"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJb-e0-hRE">
+                                            <rect key="frame" x="70" y="10" width="303" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -414,13 +421,17 @@
                                 <action selector="back:" destination="Kc6-5Y-2oS" id="Wyi-QM-Mmv"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NTy-oC-4SR"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NTy-oC-4SR">
+                            <connections>
+                                <segue destination="gw3-Gy-S6M" kind="push" id="J3t-rQ-bRh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dBS-MQ-qVH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2114.4927536231885" y="1068.75"/>
+            <point key="canvasLocation" x="2025" y="1073"/>
         </scene>
         <!--Sign in-->
         <scene sceneID="l8m-L9-8EQ">
@@ -586,6 +597,27 @@
             </objects>
             <point key="canvasLocation" x="-4367.1999999999998" y="-2064.9175412293853"/>
         </scene>
+        <!--Add Comment-->
+        <scene sceneID="TYQ-Vc-sTB">
+            <objects>
+                <viewController id="gw3-Gy-S6M" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kyb-xY-GPm"/>
+                        <viewControllerLayoutGuide type="bottom" id="6oJ-2E-InM"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FZV-ht-loJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Comment" id="4WC-jN-aNn">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="daz-AR-mvZ"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vSk-G1-gSm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2923" y="1288"/>
+        </scene>
         <!--Payment Detial-->
         <scene sceneID="cX8-bc-peL">
             <objects>
@@ -697,7 +729,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="24K-t5-kZW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3165.217391304348" y="1251.358695652174"/>
+            <point key="canvasLocation" x="3500" y="1183"/>
         </scene>
         <!--Roamni Terms of Service-->
         <scene sceneID="Cqb-dc-Msa">
@@ -4786,7 +4818,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pod-Qd-EWg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2705.7971014492755" y="694.56521739130437"/>
+            <point key="canvasLocation" x="3165" y="532"/>
         </scene>
         <!--My Tours-->
         <scene sceneID="0e8-1A-2I3">
