--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -268,7 +268,7 @@
                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="kbY-Q6-Idv" kind="show" id="urI-Ek-Oge"/>
+                                            <action selector="reviews:" destination="fwU-xU-6CH" eventType="touchUpInside" id="hn4-1k-5Hh"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Host:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMp-9o-TkI">
@@ -370,11 +370,12 @@
                         <outlet property="scrollView" destination="HkF-wI-cqc" id="nMn-OJ-2Ea"/>
                         <outlet property="titleLabel" destination="Kgd-de-mO6" id="ERf-6c-8BW"/>
                         <outletCollection property="detailMap" destination="KJm-vG-U9j" id="6RJ-U1-348"/>
+                        <segue destination="Y4O-v3-fv7" kind="show" identifier="goToReviews" id="q6G-4J-H2Z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fa0-wI-kDU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-359.4202898550725" y="1142.9347826086957"/>
+            <point key="canvasLocation" x="367" y="1256"/>
         </scene>
         <!--Reviews-->
         <scene sceneID="EWt-cU-aaU">
@@ -435,7 +436,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dBS-MQ-qVH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2024.6376811594205" y="1072.8260869565217"/>
+            <point key="canvasLocation" x="2023" y="557"/>
         </scene>
         <!--Sign in-->
         <scene sceneID="l8m-L9-8EQ">
@@ -749,7 +750,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="24K-t5-kZW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3643" y="1174"/>
+            <point key="canvasLocation" x="3949.275362318841" y="1173.913043478261"/>
         </scene>
         <!--Roamni Terms of Service-->
         <scene sceneID="Cqb-dc-Msa">
@@ -2142,7 +2143,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZEn-jH-cQq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4327.536231884058" y="790.76086956521749"/>
+            <point key="canvasLocation" x="4634.7826086956529" y="790.76086956521749"/>
         </scene>
         <!--Incoming Tours-->
         <scene sceneID="hdM-Xt-RUm">
@@ -2183,7 +2184,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UHy-c2-6Vp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5097.1014492753629" y="532.33695652173913"/>
+            <point key="canvasLocation" x="5404.347826086957" y="532.33695652173913"/>
         </scene>
         <!--My Roamni Incoming Request Detail-->
         <scene sceneID="0nN-3o-6mo">
@@ -2290,7 +2291,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="522-wo-OVU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5692.753623188406" y="1182.8804347826087"/>
+            <point key="canvasLocation" x="6000.0000000000009" y="1182.8804347826087"/>
         </scene>
         <!--Roamni Terms of Service-->
         <scene sceneID="QEA-BG-XXn">
@@ -4039,7 +4040,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rHP-jG-Tqe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6170.3999999999996" y="435.83208395802103"/>
+            <point key="canvasLocation" x="6476.811594202899" y="435.32608695652175"/>
         </scene>
         <!--MyRoamni-->
         <scene sceneID="DgN-Qq-W5j">
@@ -4211,9 +4212,6 @@ Download the Roamni app today to make a tour or take a tour.</string>
                                             <state key="normal" title="0 Reviews">
                                                 <color key="titleColor" red="0.13725490200000001" green="0.54978889230000005" blue="0.99413257840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
-                                            <connections>
-                                                <segue destination="kbY-Q6-Idv" kind="show" id="A5s-8r-R9O"/>
-                                            </connections>
                                         </button>
                                     </subviews>
                                 </tableViewCellContentView>
@@ -4243,10 +4241,13 @@ Download the Roamni app today to make a tour or take a tour.</string>
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
+                    <connections>
+                        <segue destination="Y4O-v3-fv7" kind="show" identifier="goToReviews" id="Ecl-MR-cB0"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v4S-AZ-SFa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="196" y="533"/>
+            <point key="canvasLocation" x="196" y="485"/>
         </scene>
         <!--Search-->
         <scene sceneID="kZw-7L-073">
@@ -4838,7 +4839,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pod-Qd-EWg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3165" y="532"/>
+            <point key="canvasLocation" x="3471.0144927536235" y="531.52173913043487"/>
         </scene>
         <!--My Tours-->
         <scene sceneID="0e8-1A-2I3">
@@ -5348,7 +5349,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GAr-0r-0Ad" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5367" y="454"/>
+            <point key="canvasLocation" x="5673.913043478261" y="453.26086956521743"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vXC-R7-HAB">
@@ -5432,25 +5433,6 @@ Download the Roamni app today to make a tour or take a tour.</string>
             <point key="canvasLocation" x="-331.8840579710145" y="2039.6739130434785"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="TR5-j8-Z23">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kbY-Q6-Idv" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="THC-du-7Fb"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s1U-iJ-vpG">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Kc6-5Y-2oS" kind="relationship" relationship="rootViewController" id="qEQ-dK-AHi"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IuC-B9-BxQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1173.913043478261" y="606.52173913043487"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="xBn-wU-yhH">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AYC-fB-CAF" sceneMemberID="viewController">
@@ -5467,7 +5449,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N0A-eL-KEZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="755.07246376811599" y="1501.6304347826087"/>
+            <point key="canvasLocation" x="1359" y="1534"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nxh-Iq-de1">
@@ -5487,6 +5469,24 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fz7-PA-vIC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1305" y="-5547"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eqC-qG-tOE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Y4O-v3-fv7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Smd-eP-czG">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Kc6-5Y-2oS" kind="relationship" relationship="rootViewController" id="cTi-c9-CH4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FVP-is-iyG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1099" y="532"/>
         </scene>
     </scenes>
     <resources>
@@ -5533,7 +5533,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
         <image name="version" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="urI-Ek-Oge"/>
+        <segue reference="q6G-4J-H2Z"/>
         <segue reference="s2S-wb-XYy"/>
         <segue reference="aGK-Qo-5oV"/>
         <segue reference="2hD-WS-x4K"/>
